...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvListBerita"
            android:layout_width="match_parent"
            android:layout_height="470dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clHeder"
            tools:listitem="@layout/item_list_channel_berita_item"
            android:layout_margin="20dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSinkronData"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_btn_primary_rounded"
            android:layout_width="150dp"
            android:text="@string/sinkron_data"
            android:textAllCaps="false"
            android:backgroundTint="@color/colorDark"
...
