...
                    android:fontFamily="@font/poppinssemibold"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".5" />

                <TextView
                    android:id="@+id/etLinkUrl"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:maxLines="1"
                    android:textColor="@color/light_blue_700"
                    android:textSize="@dimen/small_text"/>
...
